k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nagp
  labels:
    app.kubernetes.io/part-of: nagp-k8s-devops-finops-assignment
