k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api-service
  namespace: nagp
  labels:
    app: product-api
spec:
  type: NodePort
  selector:
    app: product-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
